github link added

--- a/final-project.html
+++ b/final-project.html
@@ -3469,6 +3469,7 @@ window.Quarto = {
 </header>
 
 
+<p><a href="https://github.com/lucawperri/STAT-331-Final-Project" class="uri">https://github.com/lucawperri/STAT-331-Final-Project</a></p>
 <div class="cell">
 <details class="code-fold">
 <summary>Code</summary>
